--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class = "blog-text">
                 <span>30 June, 2024</span>
                 <h2>“How do I start investing/trading?”: A step-by-step guide for your first step</h2>
-                <p>I'm certainly no expert but this what I would have done if I had to start all over again
+                <p>I'm certainly no expert but this is what I would have done if I had to start all over again
                 </p>
                 <div class = "blog-img">
                     <img src = "images/blog2.jpeg" alt = "">
