--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class = "blog-img">
                     <img src = "images/blog1.png" alt = "">
                   </div>
-                <a href = "blog-template.html">Read More</a>
+                <a href = "blog1.html">Read More</a>
               </div>
             </div>
             <!-- end of item -->
