--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class = "blog-img">
                     <img src = "images/blog2.jpeg" alt = "">
                   </div>
-                <a href = "#">Read More</a>
+                <a href = "blog2.html">Read More</a>
               </div>
             </div>
             <!-- end of item -->
