--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             <!-- item -->
             <div class = "blog-item">
               <div class = "blog-text">
-                <span>30 June, 2024</span>
+                <span>5 July, 2024</span>
                 <h2>“How do I start investing/trading?”: A step-by-step guide for your first step</h2>
                 <p>I'm certainly no expert but this is what I would have done if I had to start all over again
                 </p>
                 <div class = "blog-img">
-                    <img src = "images/blog2.jpeg" alt = "">
+                    <img src = "images/blog2.jpg" alt = "">
                   </div>
                 <a href = "blog2.html">Read More</a>
               </div>
