--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <br>
         <div class="social-links">
             <a href="mailto:chadhaharshman@gmail.com"><i class="fas fa-envelope"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/harshman.chadha?igsh=MXFhYnl6dTF3c2h5ag%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/harshman-chadha-047825250/?originalSubdomain=in"><i class="fab fa-linkedin"></i></a>
         </div>
         <span>harshman.chadha</span>
