--- a/blog1.html
+++ b/blog1.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles-blog.css">   
-    <title>Harshman's Finance Blog</title> 
+    <title>Coffee Can Investing: What did a 3 year experiment reveal?</title> 
 </head>
 
 <body>
