Update index.html blog3

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
                 <div class = "blog-img">
                     <img src = "images/blog1.png" alt = "">
                   </div>
-                <a href = "blog1.html">Read More</a>
+                <a href = "blog1.html" target="_blank">Read More</a>
               </div>
             </div>
             <!-- end of item -->
             <!-- item -->
             <div class = "blog-item">
               <div class = "blog-text">
-                <span>5 July, 2024</span>
+                <span>30 June, 2024</span>
                 <h2>“How do I start investing/trading?”: A step-by-step guide for your first step</h2>
-                <p>I'm certainly no expert but this is what I would have done if I had to start all over again
+                <p>I'm certainly no expert but this what I would have done if I had to start all over again
                 </p>
                 <div class = "blog-img">
                     <img src = "images/blog2.jpg" alt = "">
                   </div>
-                <a href = "blog2.html">Read More</a>
+                <a href = "blog2.html" target="_blank">Read More</a>
               </div>
             </div>
             <!-- end of item -->
@@ -74,13 +74,13 @@
             <div class = "blog-item">
               
               <div class = "blog-text">
-                <span>30 June, 2024</span>
-                <h2>“Friday Nifty-Notes”: Riding the wave or a falling knife?</h2>
-                <p>How was the overall market and some trades I made...</p>
+                <span>12 July, 2024</span>
+                <h2>Essential Variables for Peer-to-Peer Analysis in Different Industries</h2>
+                <p>Key Metrics and Insights for Comparative Sector Analysis</p>
                 <div class = "blog-img">
-                    <img src = "images/blog3.jpg" alt = "">
+                    <img src = "images/blog3.jpeg" alt = "">
                   </div>
-                <a href = "#">Read More</a>
+                <a href = "blog3.html" target="_blank">Read More</a>
               </div>
             </div>
             <!-- end of item -->
@@ -116,9 +116,9 @@
         <p>get in touch!</p>
         <br>
         <div class="social-links">
-            <a href="mailto:chadhaharshman@gmail.com"><i class="fas fa-envelope"></i></a>
-            <a href="https://www.instagram.com/harshman.chadha?igsh=MXFhYnl6dTF3c2h5ag%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/harshman-chadha-047825250/?originalSubdomain=in"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:chadhaharshman@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.instagram.com/harshman.chadha?igsh=MXFhYnl6dTF3c2h5ag%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram" target="_blank"></i></a>
+            <a href="https://www.linkedin.com/in/harshman-chadha-047825250/?originalSubdomain=in" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
         <span>harshman.chadha</span>
       </section>
