--- a/blog2.html
+++ b/blog2.html
@@ -96,9 +96,9 @@ All the best for this rollercoaster ride, sit tight and enjoy!
         <p>get in touch!</p>
         <br>
         <div class="social-links">
-            <a href="mailto:chadhaharshman@gmail.com"><i class="fas fa-envelope"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/harshman-chadha-047825250/?originalSubdomain=in"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:chadhaharshman@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.instagram.com/harshman.chadha?igsh=MXFhYnl6dTF3c2h5ag%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram" target="_blank"></i></a>
+            <a href="https://www.linkedin.com/in/harshman-chadha-047825250/?originalSubdomain=in" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
         <span>harshman.chadha</span>
       </section>
