--- a/blog1.html
+++ b/blog1.html
@@ -34,7 +34,7 @@
               <div class = "blog-text">
                 <div class="blog-title">
                   <span>30 June, 2024</span>
-                  <h2>“Coffee Can Investing”: Was it worth the hype?</h2>
+                  <h2>Coffee Can Investing: Was it worth the hype?</h2>
                   <p>If you've read about it, you've surely given it a thought. And so did I.</p>
                   <img src = "images/blog1.png" alt = "">
                   </div>
