--- a/blog2.html
+++ b/blog2.html
@@ -34,7 +34,7 @@
               <div class = "blog-text">
                 <div class="blog-title">
                   <span>5 July, 2024</span>
-                  <h2>“How do I start investing/trading?”: A step-by-step guide for your first step</h2>
+                  <h2>How do I start investing/trading?: A step-by-step guide for your first step</h2>
                   <p>I'm certainly no expert but this what I would have done if I had to start all over again</p>
                   <img src = "images/blog2.jpg" alt = "">
                   </div>
