--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
               </div>
             </div>
             <!-- end of item -->
+              <!-- item -->
+            <div class = "blog-item">
+              
+              <div class = "blog-text">
+                <span>23 September, 2024</span>
+                <h2>How to Use Sectoral Indices to Identify Stock Market Opportunities in 2024?</h2>
+                <p>A very underrated tool to making big gains</p>
+                <div class = "blog-img">
+                    <img src = "images/blog6.png" alt = "">
+                  </div>
+                <a href = "blog6.html" target="_blank">Read More</a>
+              </div>
+            </div>
+            <!-- end of item -->
           </div>
         </div>
       </section>
