added blog 4 links

--- a/blog6.html
+++ b/blog6.html
@@ -61,7 +61,7 @@ The most effective way of using these is to use them for screening stocks and fi
 <img src="images/b6-pic3.png">
 
 This is one of the bets I had taken using this method. This is a chart of the NIFTY Realty Index, which made a simple horizontal line break-out on 4th September 2023 and from there, the INDEX more than doubled in 287 days (17th June 2024). 
-This method is also based mainly on break-out trading, something I have talked about earlier in depth. Read it here!
+This method is also based mainly on break-out trading, something I have talked about earlier in depth. Read it<a href = "blog4.html" target="_blank">here!</a>
 So, once I found the break-out, I basically wanted to buy the index. Sometimes, this is actually possible as there are index-based ETFs available, but there was none for the realty sector at that time. Then my next option was to buy whatever the index was made up of and in a way make my own index.
 
 There is a slight advantage to not having an ETF available, which is that I could choose the strongest stocks from the index and buy only those. This might provide a slightly higher return than the index (provided the stocks you buy are actually the strong ones). 
@@ -74,7 +74,7 @@ I am attaching the charts of the components; you can clearly see that the index 
 <img src="images/b6-pic7.png">
 I went through each one of these stocks and bought the ones I thought would perform the best (tbh I almost bought all). And of course, I did make a very good return on these stocks. 
 But what was the point of me explaining just another investment of mine to you? The point is not to mimic what I did in some other index, it is to understand the idea behind it.
-The idea is to narrow down your screening universe, as much as you can, in the most rational way possible, without missing out on a lot of opportunities. If you think of it, in a nutshell, even my previous blog (How to Screen Stocks), was just this. That you want to see great opportunities without having to go through the charts of 4000 stocks.
+The idea is to narrow down your screening universe, as much as you can, in the most rational way possible, without missing out on a lot of opportunities. If you think of it, in a nutshell, even my previous blog <a href = "blog4.html" target="_blank">(How to Screen Stocks)</a>, was just this. That you want to see great opportunities without having to go through the charts of 4000 stocks.
 
 I'll try and break it down into clear steps:
 <b>1.	Identify a Breakout in the Sectoral Index</b>
