--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
                 <a href = "blog6.html" target="_blank">Read More</a>
               </div>
             </div>
+            <!-- end of item --><!-- item -->
+            <div class = "blog-item">
+              
+              <div class = "blog-text">
+                <span>14 November, 2024</span>
+                <h2>Mutual Funds vs Direct Stock Investing</h2>
+                <p>Which Option is Right for Indian Investors?</p>
+                <div class = "blog-img">
+                    <img src = "images/blog7.png" alt = "">
+                  </div>
+                <a href = "blog7.html" target="_blank">Read More</a>
+              </div>
+            </div>
             <!-- end of item -->
           </div>
         </div>
