--- a/index.html
+++ b/index.html
@@ -137,6 +137,19 @@
                 <a href = "blog7.html" target="_blank">Read More</a>
               </div>
             </div>
+            <!-- end of item --><!-- item -->
+            <div class = "blog-item">
+              
+              <div class = "blog-text">
+                <span>15 December, 2024</span>
+                <h2>5 Proven Golden Rules for Building Wealth in India</h2>
+                <p>A Beginner’s Guide to Financial Freedom, specially curated for India</p>
+                <div class = "blog-img">
+                    <img src = "images/blog8.jpg" alt = "">
+                  </div>
+                <a href = "blog8.html" target="_blank">Read More</a>
+              </div>
+            </div>
             <!-- end of item -->
           </div>
         </div>
