--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
                 <a href = "blog8.html" target="_blank">Read More</a>
               </div>
             </div>
+            <!-- end of item --><!-- item -->
+            <div class = "blog-item">
+              
+              <div class = "blog-text">
+                <span>22 March, 2025</span>
+                <h2>Backtesting a Trading Strategy in Python – Part 1</h2>
+                <p>Step-by-Step Guide for Beginners</p>
+                <div class = "blog-img">
+                    <img src = "images/blog9.jpg" alt = "">
+                  </div>
+                <a href = "blog9.html" target="_blank">Read More</a>
+              </div>
+            </div>
             <!-- end of item -->
           </div>
         </div>
