--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class = "blog-img">
               <img src = "images/blog9.jpg" alt = "">
             </div>
-          <a href = "b9.html" target="_blank">Read More</a>
+          <a href = "blog9.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
           <div class = "blog-img">
               <img src = "images/blog8.jpg" alt = "">
             </div>
-          <a href = "b8.html" target="_blank">Read More</a>
+          <a href = "blog8.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -78,7 +78,7 @@
           <div class = "blog-img">
               <img src = "images/blog7.png" alt = "">
             </div>
-          <a href = "b7.html" target="_blank">Read More</a>
+          <a href = "blog7.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -91,7 +91,7 @@
           <div class = "blog-img">
               <img src = "images/blog6.png" alt = "">
             </div>
-          <a href = "b6.html" target="_blank">Read More</a>
+          <a href = "blog6.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -104,7 +104,7 @@
           <div class = "blog-img">
               <img src = "images/blog5.png" alt = "">
             </div>
-          <a href = "b5.html" target="_blank">Read More</a>
+          <a href = "blog5.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -117,7 +117,7 @@
           <div class = "blog-img">
               <img src = "images/blog4.png" alt = "">
             </div>
-          <a href = "b4.html" target="_blank">Read More</a>
+          <a href = "blog4.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -130,7 +130,7 @@
           <div class = "blog-img">
               <img src = "images/blog3.jpeg" alt = "">
             </div>
-          <a href = "b3.html" target="_blank">Read More</a>
+          <a href = "blog3.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -144,7 +144,7 @@
           <div class = "blog-img">
               <img src = "images/blog2.jpg" alt = "">
             </div>
-          <a href = "b2.html" target="_blank">Read More</a>
+          <a href = "blog2.html" target="_blank">Read More</a>
         </div>
       </div>
 
@@ -157,7 +157,7 @@
           <div class = "blog-img">
               <img src = "images/blog1.png" alt = "">
             </div>
-          <a href = "b1.html" target="_blank">Read More</a>
+          <a href = "blog1.html" target="_blank">Read More</a>
         </div>
       </div>
 
