--- a/blog5.html
+++ b/blog5.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar">
       <div class="container">
-        <a href="index.html" class="navbar-brand">harshman.chadha</a>
+        <a href="index.html" class="navbar-brand">harshmanchadha.in</a>
         <div class="navbar-nav">
           <a href="index.html">home</a>
           <a href="index.html#blog">blogs</a>
