--- a/blog5.html
+++ b/blog5.html
@@ -119,7 +119,7 @@
           <p>See you in the next blog!</p>
 
           <div class="back-links">
-            <a href="index.html#blog">← Back to Blog</a>
+            <a href="index.html#blog">← Back to Blogs</a>
           </div>
         </article>
       </div>
