--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <a href="https://www.instagram.com/harshman.chadha?igsh=MXFhYnl6dTF3c2h5ag%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram" target="_blank"></i></a>
             <a href="https://www.linkedin.com/in/harshman-chadha-047825250/?originalSubdomain=in" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
-        <span>harshman.chadha</span>
+        <span>harshmanchadha.in</span>
       </section>
     </footer>
   </div>
