--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
       <h1>Latest blogs</h1>
     </div>
     <div class = "blog-content">
+
+        <!-- 29 April, 2025 -->
+      <div class = "blog-item">
+        <div class = "blog-text">
+          <span>29 April, 2025</span>
+          <h2>Backtesting a Trading Strategy in Python – Part 2</h2>
+          <p>Taking Our Strategy Further: Returns, RSI, MACD & Optimization</p>
+          <div class = "blog-img">
+              <img src = "images/blog10.png" alt = "">
+            </div>
+          <a href = "blog10.html" target="_blank">Read More</a>
+        </div>
+      </div>    
       
       <!-- 22 March, 2025 -->
       <div class = "blog-item">
